--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 name: "AutocrossRank.com"
 title: "AutocrossRank.com - Coming Soon! "
 description: "Coming Soon!"
-logo: 'assets/Logo.png'
+logo: 'assets/images/Logo-200.png'
 favicon: '/assets/favicon.ico'
 baseurl: ""
 google_analytics: 'G-ZKHV3G3SN8' # configured for Google Analytics 4 MEASUREMENT ID
