--- a/_config.yml
+++ b/_config.yml
@@ -6,12 +6,12 @@ description: "Coming Soon!"
 logo: 'assets/images/Logo-200.png'
 favicon: '/assets/favicon.ico'
 baseurl: ""
-google_analytics: 'G-ZKHV3G3SN8' # configured for Google Analytics 4 MEASUREMENT ID
+google_analytics: 'G-9NJ4X7KQC9' # configured for Google Analytics 4 MEASUREMENT ID
 # disqus: 
 mailchimp-list: 
 include: ["_pages"]
 permalink: /:title/
-url: 'https://www.AutocrossRank.com'
+url: 'https://www.autocrossrank.com'
 
 templatemessage: 'From the maker of <a href="https://www.autocrossblog.com">AutocrossBlog.com</a>.'
 
@@ -24,7 +24,7 @@ authors:
     email: christoc@christoc.com
     web: https://www.chrishammond.com
     twitter: https://twitter.com/christoc
-    description: "Founder of AutocrossRank.com. Read more at ChrisHammond.com" 
+    description: "Founder of AutocrossRank.com. Read more about <a href=\"https://www.chrishammond.com\">Chris Hammond</a>" 
 
 # Plugins
 plugins:
@@ -80,6 +80,14 @@ picture:
         height: "300"
       source_default:
         width: "300"
+
+#any defaults we want to set, the first one sets the default author for all posts
+defaults:
+  - scope:
+      path: ""  # An empty string here means all files
+      type: "posts"
+    values:
+      author: "chris"
 
 # exclude:
 #  - /assets/images/*
